--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,17 @@
   <modules>
   	<module>spring-demo-01</module>
   	<module>spring-bean</module>
+	<module>spring-ioc</module>
   </modules>
+  
+  <dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.3.9.RELEASE</version>
+		</dependency>
+
+	</dependencies>
+  
+  
 </project>
