--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ spring-di-01/.project
 spring-di-01/.classpath
 spring-di-01/target/
 
+spring-di-02/.settings/
+spring-di-02/.project
+spring-di-02/.classpath
+spring-di-02/target/
+
