--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   	<module>spring-bean</module>
 	<module>spring-ioc</module>
 	<module>spring-di-01</module>
+	<module>spring-di-02</module>
   </modules>
   
   <dependencies>
