实现简单登陆功能

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ spring-di-03/.settings/
 spring-di-03/.project
 spring-di-03/.classpath
 spring-di-03/target/
+
+spring-di-04/.settings/
+spring-di-04/.project
+spring-di-04/.classpath
+spring-di-04/target/
+
