Spring Bean 生命周期小结

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ spring-di-04/.project
 spring-di-04/.classpath
 spring-di-04/target/
 
+spring-di-05/.settings/
+spring-di-05/.project
+spring-di-05/.classpath
+spring-di-05/target/
