--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<module>spring-di-03</module>
 	<module>spring-di-04</module>
 	<module>spring-di-05</module>
+	<module>spring-aop-proxy</module>
   </modules>
   
   <dependencies>
