--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ spring-aop-proxy/.settings/
 spring-aop-proxy/.project
 spring-aop-proxy/.classpath
 spring-aop-proxy/target/
+
+
+spring-aop-01/.settings/
+spring-aop-01/.project
+spring-aop-01/.classpath
+spring-aop-01/target/
+
