--- a/spring-aop-01/pom.xml
+++ b/spring-aop-01/pom.xml
@@ -21,7 +21,15 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.2.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
+
 
 	</dependencies>
 
