--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<module>spring-di-05</module>
 	<module>spring-aop-proxy</module>
 	<module>spring-aop-01</module>
+	<module>spring-aop-02</module>
   </modules>
   
   <dependencies>
