--- a/spring-aop-02/pom.xml
+++ b/spring-aop-02/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>spring-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>spring-aop-01</artifactId>
+	<artifactId>spring-aop-02</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -16,11 +16,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>4.3.2.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+
+
 	</dependencies>
 
 </project>
