--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<module>spring-aop-proxy</module>
 	<module>spring-aop-01</module>
 	<module>spring-aop-02</module>
+	<module>spring-task-01</module>
   </modules>
   
   <dependencies>
