--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<module>spring-aop-01</module>
 	<module>spring-aop-02</module>
 	<module>spring-task-01</module>
+	<module>spring-jdbc-01</module>
   </modules>
   
   <dependencies>
