--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ spring-jdbc-01/.settings/
 spring-jdbc-01/.project
 spring-jdbc-01/.classpath
 spring-jdbc-01/target/
+
+spring-jdbc-02/.settings/
+spring-jdbc-02/.project
+spring-jdbc-02/.classpath
+spring-jdbc-02/target/
