--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<module>spring-task-01</module>
 	<module>spring-jdbc-01</module>
 	<module>spring-jdbc-02</module>
+	<module>spring-tx-02</module>
   </modules>
   
   <dependencies>
