商品够买模拟事务回滚

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,8 @@ spring-tx-02/.settings/
 spring-tx-02/.project
 spring-tx-02/.classpath
 spring-tx-02/target/
+
+spring-tx-03/.settings/
+spring-tx-03/.project
+spring-tx-03/.classpath
+spring-tx-03/target/
