xml配置 实现事务管理（但是存在bug需要修改）

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,8 @@ spring-tx-03/.settings/
 spring-tx-03/.project
 spring-tx-03/.classpath
 spring-tx-03/target/
+
+spring-tx-04/.settings/
+spring-tx-04/.project
+spring-tx-04/.classpath
+spring-tx-04/target/
